--- a/src/App.module.css
+++ b/src/App.module.css
@@ -14,6 +14,9 @@
   0 5px 10px rgba(0,0,0,.25),
   0 10px 10px rgba(0,0,0,.2),
   0 20px 20px rgba(0,0,0,.15);
+  
+  color: linear-gradient(to right, #00c6ff, #0072ff);
+
 }
 
 
