--- a/src/components/MovieCard.module.css
+++ b/src/components/MovieCard.module.css
@@ -5,9 +5,14 @@
     
 }
 
+.movieCard:hover{
+    opacity: 0.5;
+}
+
 .movieCardImage {
     border-radius: 10px;
     background-color: azure;
+    
     }
 
 @media (max-width: 560px){
