--- a/src/components/MovieCard.module.css
+++ b/src/components/MovieCard.module.css
@@ -2,17 +2,17 @@
     list-style: none;
     font-size: 1.5rem;
     text-align: center;
-    
-}
-
-.movieCard:hover{
-    opacity: 0.5;
 }
 
 .movieCardImage {
     border-radius: 10px;
+    transform: 1s;
     background-color: azure;
     
+    }
+
+.movieCardImage:hover{
+    transform: scale(1.1);
     }
 
 @media (max-width: 560px){
