--- a/src/components/Search.module.css
+++ b/src/components/Search.module.css
@@ -16,11 +16,7 @@
 
 .buttonSearch{
     position:absolute;
-    right: 0;
+    right: 8px;
     top: 0;
-    cursor: pointer;
     height: 100%;
-
-    background: none;
-    border: none;
 }
